@@ -53,6 +53,23 @@ apply plugin: 'application'
 
 mainClassName = 'no.nav.legeerklaering.LegeerklaeringApplicationKt'
 
+applicationDefaultJvmArgs = [
+        '-Djavax.net.ssl.trustStore=${NAV_TRUSTSTORE_PATH}',
+        '-Djavax.net.ssl.trustStorePassword=${NAV_TRUSTSTORE_PASSWORD}',
+        '-XX:+UnlockExperimentalVMOptions',
+        '-XX:+UseCGroupMemoryLimitForHeap',
+        '-XX:+UseG1GC',
+        '-XshowSettings:vm'/*,
+        '-Dlogback.configurationFile=logback-remote.xml'*/
+]
+
+startScripts {
+    doLast {
+        unixScript.text = unixScript.text.replace('\\${NAV_TRUSTSTORE_PATH}', '${NAV_TRUSTSTORE_PATH}')
+        unixScript.text = unixScript.text.replace('\\${NAV_TRUSTSTORE_PASSWORD}', '${NAV_TRUSTSTORE_PASSWORD}')
+    }
+}
+
 configurations {
     generateJaxb2
 }
